update: Homepage Mechanism Adjustment: When new outfit recommendations are added to the calendar, the homepage recommendations will prioritize those recommendations.
